# clipper

./: .gitignore  CMakeLists.txt  README.md  build-clip.bat  clip.cpp  clip.manifest  clip.rc  clip_version.h  create-signing-cert.ps1  diag-signing.ps1  generate-version-header.ps1  install-signing-trust.bat  install-signing-trust.ps1  publish-release.ps1  sign-clip.ps1
